# rust-grapgql

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  requests.http
docs/: release_check_list.md
migrations/2023-02-04-081514_create_todos/: up.sql
src/: lib.rs  main.rs
src/database/: mod.rs
src/database/schemas/mysql/: schema.rs
src/graphql/: mod.rs
src/graphql/queries/: user.graphql
src/graphql/schemas/: shcema.graphql
src/logs/: logger.rs
src/models/: errors.rs  mod.rs  todos.rs  users.rs
src/routes/: error.rs  mod.rs  todos.rs
src/utils/: password.rs  random.rs
