[package]
authors = ["takeuchi-shogo, <sgtkuc1118@gmail.com>"]
name = "rust_graphql"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target."cfg(not(windows))".dependencies]
# Logging
syslog = "6.0.1" # Needs to be v4 until fern is updated

[dependencies]

# Logging
log = "0.4.17"
fern = { version = "0.6.1", features = ["syslog-6", "colored"] }
tracing = { version = "0.1.37", features = ["log"] } # Needed to have lettre and webauthn-rs trace logging to work

# UUID generation
uuid = { version = "1.3.0", features = ["serde", "v4"] }

# Password hash
pwhash = "1.0.0"

# Random generator
rand = "0.8.5"

# Web framwork
rocket = { version = "0.5.0-rc.2", features = ["secrets", "tls", "json"], default-features = false }
rocket_contrib = { version = "0.4.11", feature = ["json"] }

# Async futures
futures = "0.3.26"

# A generic serialization/deserialization framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"

# A safe, extensible ORM and Query builder
diesel = { version = "2.0.3", features = ["mysql"] }
diesel_migrations = "2.0.0"
diesel_logger = "0.2.0"

# Date and Time for Rust
chrono = "0.4.23"

# Async GraphQL
async-graphql = "5.0"
async-graphql-rocket = "5.0.5"

# Load environment variables from '.env'
dotenv = "0.15.0"
